fixed the producrt page on smaller devvice

--- a/src/App.css
+++ b/src/App.css
@@ -63,7 +63,7 @@ body{
     width: 48px;
     height: 48px;
     border-radius: 50%;
-    border: 3px solid #000;
+    border: 2px solid #000;
     position: absolute;
     left: 0;
     top: 0;
